--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             
             <div class="testimonial-box">
               <div class="author-test">
-                <img src="img/murad1.jpg" alt="" class="rounded-circle b-shadow-a">
+                <img src="img/m11.jpg" alt="" class="rounded-circle b-shadow-a">
                 <span class="author">Murad Gafaroff</span>
               </div>
               <div class="content-test">
