--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             
             <div class="testimonial-box">
               <div class="author-test">
-                <img src="img/m11.jpg" alt="" class="rounded-circle b-shadow-a">
+                <img src="img/m11.jpg" alt="" class="rounded-circle b-shadow-a" style="height: 250px;">
                 <span class="author">Murad Gafaroff</span>
               </div>
               <div class="content-test">
@@ -496,13 +496,7 @@
             <div class="copyright-box">
               <p class="copyright">&copy; Copyright <strong>MG</strong></p>
               <div class="credits">
-                <!--
-                  All the links in the footer should remain intact.
-                  You can delete the links only if you purchased the pro version.
-                  Licensing information: https://bootstrapmade.com/license/
-                  Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
-                -->
-                Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                
               </div>
             </div>
           </div>
